k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gws
  labels:
    name: gws
    environment: production
